<resources>
    <string name="app_name">BWA Mov</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_deskripsi">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_deskripsi">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_deskripsi">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="angga_risky">Angga Risky</string>
    <string name="email_address">Email Address</string>
    <string name="email">admin@buildwithangga.com</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="welcome">Welcome,\nAngga Risky</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="IDR">IDR 280.000</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="avengers">Avengers: Infinity War</string>
    <string name="avenger_genre">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="avengers_s">The Avengers must stop Thanos, a mad Titan, and his army from getting their hands on all the infinity stones. However, the mad Titan is prepared to go to any lengths to carry out his insane plan.</string>
    <string name="whos_played">Who’s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar_Bioskop</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="booked">Booked</string>
    <string name="empty">Empty</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="batalkan">Batalkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="when">When</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="total_harus_dibayar">Total Harus Dibayar</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History</string>
    <string name="memulai">Memulai</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="Datetime">datetime</string>
</resources>